update: create and update hotel UI